# moos-ivp-sim-gazebo

./: .gitignore  CMakeLists.txt  README.md
missions/hello-world/: README.md  launch.sh  meta_asset1.bhv  meta_shoreside.moos  plug_pShare.moos  plug_uFldNodeBroker.moos
missions/multi-robot/: README.md  clean.sh  launch.sh  meta_asset1.bhv  meta_asset1.moos  meta_asset2.bhv  meta_asset2.moos
scripts/mit/: mit_sp_esat18.info  mit_sp_esat19.info  mit_sp_goo18.info  mit_sp_osm18.info
src/: CMakeLists.txt
src/iGazeboVessel/: GazeboVessel.cpp  GazeboVessel.h  Thruster.cpp  Thruster.h  VehRotController.cpp  VehRotController.h  iGazeboVessel.moos
src/pParseGateway/: CMakeLists.txt  ParseGateway.cpp  ParseGateway.h  ParseGateway_Info.cpp  ParseGateway_Info.h  main.cpp
